kubernetes/kubernetes.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ${NAMESPACE}  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ${APPLICATION_NAME}
  name: ${APPLICATION_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APPLICATION_NAME}
  template:
    metadata:
      labels:
        app: ${APPLICATION_NAME}
    spec:      
      containers:
        - image: '${IMAGE_REPOSITORY}/${IMAGE_SUBPATH}${APPLICATION_NAME}:${IMAGE_TAG}'
          name: ${APPLICATION_NAME}          
          resources:
            limits:
              cpu: 200m
              memory: 1Gi
            requests:
              cpu: 20m
              memory: 20Mi      
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ${APPLICATION_NAME}
  name: ${APPLICATION_NAME}
spec:
  ports:
    - name: 5015-tcp
      port: 5015
      protocol: TCP
      targetPort: 5015
  selector:
    app: ${APPLICATION_NAME}
---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: ${APPLICATION_NAME}
  labels:
    app: ${APPLICATION_NAME}
  annotations:    
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 1m    
    nginx.ingress.kubernetes.io/server-snippet: |-      
      http2_max_header_size 100k;
      http2_max_field_size 100k;    
spec:
  tls:
    - hosts:
        - ${HOSTNAME}
      secretName: ${INGRESS_SECRET_NAME}
  rules:
    - host: ${HOSTNAME}
      http:
        paths:
          - path: /
            backend:
              serviceName: ${APPLICATION_NAME}
              servicePort: 5015
